[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resource/Fonts/TextFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scene/Block.gd" type="Script" id=2]
[ext_resource path="res://Resource/icons8-pixel-star-50.png" type="Texture" id=3]
[ext_resource path="res://Resource/Fonts/ButtonFont.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.784314, 1, 0.776471, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.992157, 1, 0.72549, 1 )

[node name="Block" type="Control"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0.901961, 0.941176, 1, 1 )

[node name="Progress" type="ProgressBar" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 25.0
percent_visible = false

[node name="ReferenceRect" type="ReferenceRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -25.0
margin_right = 100.0
margin_bottom = 25.0
mouse_filter = 1
border_color = Color( 0, 0, 0, 1 )
border_width = 1.5
editor_only = false

[node name="Header" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 28.0
margin_top = 4.0
margin_right = -8.0
margin_bottom = -3.0
mouse_filter = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Проверка текста 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20"
align = 1
valign = 1
autowrap = true
max_lines_visible = 2

[node name="ChildZone" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="Star" type="TextureRect" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 23.0
margin_bottom = 23.0
texture = ExtResource( 3 )
expand = true

[node name="Level" type="Label" parent="."]
margin_left = 3.0
margin_top = 25.0
margin_right = 28.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0.639216, 0.180392, 0.768627, 1 )
custom_fonts/font = ExtResource( 4 )
text = "ST"
align = 1
valign = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="gui_input" from="." to="." method="_on_Block_gui_input"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
